adding layouts template

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,5 @@
- <!DOCTYPE html>
-<html>
-    <title>Flask Blog</title>
-<body>
-    <h1>About Page</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+    <h1>About page</h1>
+    <p>About page content...</p>
+{% endblock %}
