--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,5 @@
- <!DOCTYPE html>
-<html>
-    <title>Flask Blog</title>
-<body>
-    <h1>Home Page</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+    <h1>Home page</h1>
+    <p> Home page content goes here.</p>
+{% endblock content %}
